# KB

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  context.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/tests/: artifact_tests.py  conftest.py  e2e_app.py  test_answer_gold_v1.py  test_answer_streaming.py  test_api_contract.py  test_artifact_gate.py  test_artifact_registry.py  test_artifact_test_selection.py  test_artifact_verification.py  test_bge_m3_remote_client.py  test_build_bge_m3_index.py  test_candidate_canonicalize_v2.py  test_candidate_publish_index_v1.py  test_candidate_release_packaging_v1.py  test_candidate_semantic_build_v2.py  test_canonical_contract_v2.py  test_chat_store.py  test_chunk_id_migration_v3.py  test_chunk_store.py  test_chunking_evaluation.py  test_cleaning_v2_batch.py  test_cleaning_v2_contracts.py  test_cleaning_v2_docling_adapter.py  test_cleaning_v2_heading_hierarchy.py  test_cleaning_v2_preflight.py  test_cleaning_v2_release.py  test_context_assembler.py  test_converged_pipeline_v2.py  test_conversation_api.py  test_corpus_ocr_assessment.py  test_corpus_profiling.py  test_dedup_strategy_evaluation.py  test_deepseek_eval_analysis.py  test_deployment_state.py  test_docling_reprocess_materializer_v1.py  test_docling_runtime_contract.py  test_embedding_provider.py  test_evaluation_ownership.py  test_evidence_governance_v1.py  (+56 more)
bgp_knowledge_base/: .env.example  .gitignore  README.md  pyproject.toml  requirements-rag.txt  requirements-service.txt  目录介绍.md
bgp_knowledge_base/config/: data_management_capabilities.yaml  lifecycle_policy.yaml  llm_candidate_enrichment.yaml  rag_retrieval.yaml  semantic_identity.yaml  semantic_quality_rules.yaml  source_types.yaml  stage_acceptance_gates.yaml  storage_formats.yaml
bgp_knowledge_base/data/: README.md
bgp_knowledge_base/datasets/: artifact_manifest.csv  artifact_manifest.jsonl  authoritative_source_requirements.csv  case_observations.csv  case_observations.jsonl  chunk_enrichment_candidates.jsonl  deepseek_rag_answer_eval_results.jsonl  entity_link_candidates.jsonl  entity_review_packets.csv  entity_review_packets.jsonl  entity_review_queue.csv  entity_review_queue.jsonl  entity_source_evidence.csv  entity_source_evidence.jsonl  (+40 more)
(+959 files in other folders)
