[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bgpkb"
version = "0.1.0"
description = "BGP knowledge base data preparation, query, and read-only service."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "jsonschema>=4.26.0",
    "numpy>=2.0",
    "pyyaml>=6.0.3",
    "referencing>=0.37.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
bgpkb-pipeline = "bgpkb.workflows.converged_pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bgpkb = ["api/templates/*.html", "api/static/*.css"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "artifact: 需要已验证发布制品的集成或端到端测试。",
    "serving_artifact: 需要只读 serving bundle 的运行时兼容测试。",
    "legacy_documentation: 待文档收敛移除或替换的历史阶段文档检查。",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
