[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bgpkb"
version = "0.1.0"
description = "BGP knowledge base data preparation, query, and read-only service."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "numpy>=2.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.49.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bgpkb = ["service/templates/*.html", "service/static/*.css"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "pytest>=9.1.1",
    "referencing>=0.37.0",
]
